# otus-project

./: README.md  manage.py  pyproject.toml
api/: urls.py  views.py
api/templates/: add_list.html
assets/css/: styles.css
assets/js/: add.js  single.js
orders/: admin.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py
orders/templates/: add.html  order.html  orders.html  searchbar.html
servicebase/: asgi.py  settings.py  urls.py  wsgi.py
templates/layouts/: footer.html  header.html  main_app.html  menu.html
